# hw_6

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
include/: matrix.hpp
src/: main.cpp
tests/: tests.cpp
